# broker-service/docs/swagger.json
@@ -145,6 +145,26 @@
                     }
                 }
             }
+        },
+        "/collections/new-films": {
+            "get": {
+                "description": "this endpoint goes to kinopoisk API and gets a JSON data with new films",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Collections"
+                ],
+                "summary": "New Collections",
+                "responses": {
+                    "200": {
+                        "description": "Successful registration",
+                        "schema": {
+                            "$ref": "#/definitions/handlers.jsonResponse"
+                        }
+                    }
+                }
+            }
         }
     },
     "definitions": {
